@@ -20,6 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -28,10 +29,13 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 	
 	private final UserDetailsService userDetailsService;
 	private final BCryptPasswordEncoder bCryptPasswordEncoder;
+	
 	@Value("${auth.encryptionSecret}")
 	private String encryptionSecret;
+	
 	@Value("${auth.authorizationTokenExpirationTime}")
 	private long authTokenExpireTime;
+	
 	@Value("${auth.refreshTokenExpirationTime}")
 	private long refreshTokenExpireTime;
 	
@@ -57,9 +61,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 		http.cors().and().csrf().disable();
 		http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS);
 		
-		http.authorizeRequests().antMatchers("/api/user/token/refresh").permitAll();
-		http.authorizeRequests().antMatchers("/api/user/admin/**").hasAnyAuthority("ROLE_ADMIN");
-		
+		// TODO: Currently permit all requests.
+//		http.authorizeRequests().antMatchers("/api/user/token/refresh").permitAll();
+//		http.authorizeRequests().antMatchers("/api/user/admin/**").hasAnyAuthority("ROLE_ADMIN");
 		http.authorizeRequests().anyRequest().permitAll();
 		
 		http.addFilterBefore(authorizationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -78,8 +82,8 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 		UrlBasedCorsConfigurationSource urlConfigurationSource = new UrlBasedCorsConfigurationSource();
 		
 		corsConfiguration.addAllowedOrigin("*");
-		corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT","DELETE"));
-		corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
+		corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+		corsConfiguration.setAllowedHeaders(List.of("*"));
 		
 		urlConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
 		return urlConfigurationSource;
